Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 3.0.0
============================

2023-00-00 Jose Kahan
	* src/{parse.c, string.c, proto.h}
	Some old messages or broken UA used "DEFAULT_CHARSET" or "foo_CHARSET"
	as a value for the charset attribute. We now filter out those broken
	values from the charset value. In the case of "DEFAULT_CHARSET", the
	end result will be equivalent to not having a charset attribute.  In
	that case, the parser will either use the charset associated with
	another header value or the first body part or, by default, use
	US-ASCII.

	* src/{parse.c, print.c, hypermail.h}
	Fixes an issue when parsing a message with one or more invalid email
	headers could make hypermail crash. If hypermail detects an invalid
	header, it will mark it as such and skip it during the rest of the
	parsing and markup generation. Some examples of invalid headers
	are those missing a header name, value, ':\s', etc.

	* src/{parse.c, string.c, proto.h} configure.in
	extend mdecode_RFC2047() so that;
	1) it partially supports RFC6532
	2) if a header value is not valid UTF-8,
	replaces it with "(invalid string)"
	3) if a header value is given as a binary unencoded string,
	it tries to detect the charset with libchardet. In case of failure,
	it will replace the header value with "(invalid string)"

	* src/parse.c
	Fixes an error when a multipart/alternative message is missing
	its end boundary immediately followed by another message that
	has a multipart/alternative.

	* src/{hypermail.h, print.c}
	Two enhancements to simplify the understanding of complex structured
	messages when using screen readers.

	For forwarded messages, appending a forwarded message counter
	to identify each message and its optional list of stored
	attachmens..

	Reduced the text "List of stored attachments" to "Attachments for
	message nesting level-sequence" for forwarded messages and just
	"Attachments" for the root message.
